<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="activity_about_label">About</string>
    <string name="activity_settings_label">Settings</string>
    <string name="app_ads_desc">No Ads</string>
    <string name="app_background_tasks_desc">No Background Tasks</string>
    <string name="app_creator" translatable="false">@string/contributor_pombo</string>
    <string name="app_creator_url" translatable="false">@string/contributor_pombo_url</string>
    <string name="app_offline_desc">Works Offline</string>
    <string name="app_trackers_desc">No Trackers</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_font_custom_pick">Choose Font file</string>
    <string name="btn_go_back">Go Back</string>
    <string name="btn_join_discord">Join Discord</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_save">Save</string>
    <string name="btn_theme_apply_custom">Apply Custom Theme</string>
    <string name="checkbox_always_show_search_bar">Always visible</string>
    <string name="checkbox_prevent_home_screen_rotation">Lock screen rotation</string>
    <string name="checkbox_nav_bar_transparent">Transparent navigation bar</string>
    <string name="checkbox_show_system_bar">Show system bar</string>
    <string name="colorpicker_theme_accent">Accent</string>
    <string name="colorpicker_theme_background_1">Background 1</string>
    <string name="colorpicker_theme_background_2">Background 2</string>
    <string name="colorpicker_theme_background_3">Background 3</string>
    <string name="colorpicker_theme_background_4">Background 4</string>
    <string name="colorpicker_theme_bg_display">Display Background</string>
    <string name="colorpicker_theme_button_1_background">Button 1 Background</string>
    <string name="colorpicker_theme_button_1_background_selected">Button 1 Selected Background</string>
    <string name="colorpicker_theme_button_2_background">Button 2 Background</string>
    <string name="colorpicker_theme_collapsible_header">Collapsible Header</string>
    <string name="colorpicker_theme_danger">Danger</string>
    <string name="colorpicker_theme_disabled">Disabled</string>
    <string name="colorpicker_theme_foreground">Foreground</string>
    <string name="colorpicker_theme_h1">H1</string>
    <string name="colorpicker_theme_icons">Icons</string>
    <string name="colorpicker_theme_input_background">Input Background</string>
    <string name="colorpicker_theme_media_background">Media Background</string>
    <string name="colorpicker_theme_progressbar">Progress Bar</string>
    <string name="colorpicker_theme_task_frequency">Task Frequency</string>
    <string name="contributor_isotjs" translatable="false">isotjs</string>
    <string name="contributor_isotjs_url" translatable="false">github.com/isotjs</string>
    <string name="contributor_joerikaiser" translatable="false">Joeri Kaiser</string>
    <string name="contributor_joerikaiser_url" translatable="false">github.com/JoeriKaiser</string>
    <string name="contributor_pombo" translatable="false">Pombo</string>
    <string name="contributor_pombo_url" translatable="false">github.com/pomboverso</string>
    <string name="discord_url" translatable="false">https://discord.gg/zFFupY8PFE</string>
    <string name="filepicker_font_custom_none">No font selected</string>
    <string name="h2_color_picker">Pick a Color</string>
    <string name="h3_app">App</string>
    <string name="h3_apps_by_rama">Apps by Rama</string>
    <string name="h3_contributors">Maintainers</string>
    <string name="h3_fonts">Fonts</string>
    <string name="h3_icons">Icons</string>
    <string name="h3_language">Language</string>
    <string name="h3_links">Community Links</string>
    <string name="h3_system">System</string>
    <string name="h3_themes">Themes</string>
    <string name="hint_hex_color" translatable="false">#RRGGBB</string>
    <string name="label_zoom">Zoom</string>
    <string name="license_cc_4" translatable="false">CC 4.0</string>
    <string name="license_gpl3" translatable="false">GPL 3.0</string>
    <string name="license_mit" translatable="false">MIT</string>
    <string name="license_ofl_1_1" translatable="false">OFL 1.1</string>
    <string name="name_version" translatable="false">%1$s %2$d</string>
    <string name="product_catppuccin_creator" translatable="false">Pocco</string>
    <string name="product_catppuccin_latte_name" translatable="false">Catppuccin Latte</string>
    <string name="product_catppuccin_name" translatable="false">Catppuccin Moccha</string>
    <string name="product_catppuccin_url" translatable="false">github.com/catppuccin</string>
    <string name="product_dracula_creator" translatable="false">Zeno Rocha</string>
    <string name="product_dracula_name" translatable="false">Dracula</string>
    <string name="product_dracula_url" translatable="false">github.com/dracula</string>
    <string name="product_hackernoon_creator" translatable="false">HackerNoon</string>
    <string name="product_hackernoon_name" translatable="false">Pixel Icon Library</string>
    <string name="product_hackernoon_url" translatable="false">github.com/hackernoon/pixel-icon-library</string>
    <string name="product_jaguar" translatable="false">Jaguar</string>
    <string name="product_jaguar_url" translatable="false">github.com/rama-io/jaguar</string>
    <string name="product_jersey_creator" translatable="false">Sarah Cadigan-Fried</string>
    <string name="product_jersey_name" translatable="false">Jersey 25</string>
    <string name="product_jersey_url" translatable="false">github.com/scfried/soft-type-jersey</string>
    <string name="product_mako" translatable="false">Mako</string>
    <string name="product_mako_url" translatable="false">github.com/rama-io/mako</string>
    <string name="product_melange_creator" translatable="false">Savq</string>
    <string name="product_melange_name" translatable="false">Mélange Dark</string>
    <string name="product_melange_url" translatable="false">github.com/savq/melange-nvim</string>
    <string name="product_okapi" translatable="false">Okapi</string>
    <string name="product_okapi_url" translatable="false">github.com/rama-io/okapi</string>
    <string name="product_rama" translatable="false">Rama</string>
    <string name="product_teyin" translatable="false">Teyin</string>
    <string name="product_teyin_url" translatable="false">github.com/rama-io/teyin</string>
    <string name="product_tokyo_creator" translatable="false">Enkia</string>
    <string name="product_tokyo_name" translatable="false">Tokyo Night</string>
    <string name="product_tokyo_url" translatable="false">github.com/enkia/tokyo-night-vscode-theme</string>
    <string name="product_tui" translatable="false">Tui</string>
    <string name="product_tui_url" translatable="false">github.com/rama-io/tui</string>
    <string name="product_txori" translatable="false">Txori</string>
    <string name="product_txori_url" translatable="false">github.com/rama-io/txori</string>
    <string name="radio_default">Default</string>
    <string name="radio_default_system">Default (System)</string>
    <string name="radio_font_custom">Custom font</string>
    <string name="radio_language_english" translatable="false">English</string>
    <string name="radio_language_fi" translatable="false">Suomi</string>
    <string name="radio_language_fil_rPH" translatable="false">Filipino</string>
    <string name="radio_language_french" translatable="false">Français</string>
    <string name="radio_language_german" translatable="false">Deutsch</string>
    <string name="radio_language_jp" translatable="false">日本語</string>
    <string name="radio_language_pt_rBR" translatable="false">Português (Brasil)</string>
    <string name="radio_language_system_default">System Default (fallback to English)</string>
    <string name="radio_language_turkish" translatable="false">Türkçe</string>
    <string name="radio_language_zh_rCN" translatable="false">简体中文</string>
    <string name="radio_language_spanish" translatable="false">Español</string>
    <string name="radio_none">None</string>
    <string name="radio_theme_custom">Custom</string>
    <string name="radio_theme_mono_dark">Mono Dark</string>
    <string name="radio_theme_mono_light">Mono Light</string>
    <string name="radio_theme_rama" translatable="false">Rama</string>
    <string name="rama_url" translatable="false">rama-io.github.io</string>
    <string name="settings_section_collapse_indicator" translatable="false">[-]</string>
    <string name="settings_section_expand_indicator" translatable="false">[+]</string>
    <string name="toast_invalid_color">Invalid color</string>
</resources>
