<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_root"
    android:layout_height="match_parent"
    android:background="@color/bg_1"
    android:orientation="vertical"
    style="@style/VerticalListDivided">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center_horizontal"
            style="@style/VerticalListDivided">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:tint="@color/accent_1"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/name_version"
                style="@style/H3_Center" />

            <TextView
                android:id="@+id/app_description"
                style="@style/Text_Center" />

            <TextView
                android:text="@string/h3_app"
                style="@style/H3" />

            <LinearLayout
                android:id="@+id/claims"
                android:gravity="center_horizontal"
                style="@style/VerticalListDivided" />

            <TextView
                android:text="@string/h3_apps_by_rama"
                style="@style/H3" />

            <LinearLayout
                android:id="@+id/catalogue"
                android:gravity="center_horizontal"
                style="@style/VerticalListDivided" />

            <TextView
                android:text="@string/h3_contributors"
                style="@style/H3" />

            <LinearLayout
                android:id="@+id/contributors"
                android:gravity="center_horizontal"
                style="@style/VerticalListDivided" />

            <TextView
                android:text="@string/h3_icons"
                style="@style/H3" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_user"
                android:text="@string/product_hackernoon_creator" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_seedlings"
                android:text="@string/product_hackernoon_name" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_github"
                android:text="@string/product_hackernoon_url" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_octagon_check"
                android:text="@string/license_cc_4" />

            <TextView
                android:text="@string/h3_fonts"
                style="@style/H3" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_user"
                android:text="@string/product_jersey_creator" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_seedlings"
                android:text="@string/product_jersey_name" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_github"
                android:text="@string/product_jersey_url" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_octagon_check"
                android:text="@string/license_ofl_1_1" />

            <TextView
                android:text="@string/h3_themes"
                style="@style/H3" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_user"
                android:text="@string/product_dracula_creator" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_seedlings"
                android:text="@string/product_dracula_name" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_github"
                android:text="@string/product_dracula_url" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_octagon_check"
                android:text="@string/license_mit" />

            <View style="@style/Separator" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_user"
                android:text="@string/product_catppuccin_creator" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_seedlings"
                android:text="@string/product_catppuccin_name" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_github"
                android:text="@string/product_catppuccin_url" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_octagon_check"
                android:text="@string/license_mit" />

            <View style="@style/Separator" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_user"
                android:text="@string/product_tokyo_creator" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_seedlings"
                android:text="@string/product_tokyo_name" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_github"
                android:text="@string/product_tokyo_url" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_octagon_check"
                android:text="@string/license_mit" />

            <View style="@style/Separator" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_user"
                android:text="@string/product_melange_creator" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_seedlings"
                android:text="@string/product_melange_name" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_github"
                android:text="@string/product_melange_url" />

            <com.rama.bohio.widgets.WdLabel
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/px_octagon_check"
                android:text="@string/license_mit" />

        </LinearLayout>
    </ScrollView>

    <View style="@style/Separator" />

    <Button
        android:id="@+id/discord_button"
        android:text="@string/btn_join_discord"
        style="@style/BTN2" />

    <Button
        android:id="@+id/close_button"
        android:text="@string/btn_go_back"
        style="@style/BTN1" />
</LinearLayout>